--- a/coach_sportif.ipynb
+++ b/coach_sportif.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "82003737",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
        "4                 HIIT  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "c61c5a04",
    "metadata": {},
    "outputs": [
@@ -194,7 +194,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
+   "id": "a4fcc522",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/05/26 16:06:07 INFO mlflow.tracking.fluent: Experiment with name 'CoachSportif' does not exist. Creating a new experiment.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Experiment: artifact_location='file:///c:/Users/mazen/Downloads/COACH_SPORTIF/mlruns/542932965039613921', creation_time=1748268367219, experiment_id='542932965039613921', last_update_time=1748268367219, lifecycle_stage='active', name='CoachSportif', tags={}>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import mlflow\n",
+    "import mlflow.sklearn\n",
+    "import mlflow.xgboost\n",
+    "\n",
+    "mlflow.set_experiment(\"CoachSportif\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "4531bfad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/05/26 16:06:15 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MLflow run KNN terminé avec accuracy : 0.23333333333333334\n"
+     ]
+    }
+   ],
+   "source": [
+    "with mlflow.start_run(run_name=\"KNN - Recommandation\"):\n",
+    "    mlflow.log_param(\"model\", \"KNN\")\n",
+    "    mlflow.log_param(\"n_neighbors\", 5)\n",
+    "    \n",
+    "    mlflow.sklearn.log_model(model_reco, \"model_reco_knn\")\n",
+    "    from sklearn.metrics import accuracy_score\n",
+    "    acc = accuracy_score(y_test, y_pred)\n",
+    "    mlflow.log_metric(\"accuracy\", acc)\n",
+    "    print(\"MLflow run KNN terminé avec accuracy :\", acc)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "01181420",
    "metadata": {},
    "outputs": [
@@ -204,7 +269,7 @@
        "['model_reco.pkl']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "d48e447b",
    "metadata": {},
    "outputs": [
@@ -255,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "ca457903",
    "metadata": {},
    "outputs": [
@@ -265,7 +330,7 @@
        "['model_perf.pkl']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,22 +341,8 @@
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "name": "python"
   }
  },
  "nbformat": 4,
