--- a/coach_sportif.ipynb
+++ b/coach_sportif.ipynb
@@ -338,6 +338,44 @@
    "source": [
     "joblib.dump(model_perf, \"model_perf.pkl\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "b6c6479d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['model_perf.pkl']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import joblib\n",
+    "\n",
+    "# Chargement\n",
+    "df = pd.read_csv(\"data_perf.csv\")\n",
+    "\n",
+    "X = df.drop(\"progression_future\", axis=1)\n",
+    "y = df[\"progression_future\"]\n",
+    "\n",
+    "# Modèle\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "model_perf = RandomForestRegressor()\n",
+    "model_perf.fit(X_train, y_train)\n",
+    "\n",
+    "# Sauvegarde\n",
+    "joblib.dump(model_perf, \"model_perf.pkl\")\n"
+   ]
   }
  ],
  "metadata": {
