--- a/coach_sportif.ipynb
+++ b/coach_sportif.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "82003737",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
        "4                 HIIT  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,8 +130,8 @@
     "import pandas as pd\n",
     "\n",
     "# Chargement des données simulées\n",
-    "df_reco = pd.read_csv(\"data_reco.csv\")\n",
-    "df_perf = pd.read_csv(\"data_perf.csv\")\n",
+    "df_reco = pd.read_csv(\"data/data_reco.csv\")\n",
+    "df_perf = pd.read_csv(\"data/data_perf.csv\")\n",
     "\n",
     "df_reco.head()"
    ]
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "c61c5a04",
    "metadata": {},
    "outputs": [
@@ -194,24 +194,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "a4fcc522",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025/05/26 16:06:07 INFO mlflow.tracking.fluent: Experiment with name 'CoachSportif' does not exist. Creating a new experiment.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "<Experiment: artifact_location='file:///c:/Users/mazen/Downloads/COACH_SPORTIF/mlruns/542932965039613921', creation_time=1748268367219, experiment_id='542932965039613921', last_update_time=1748268367219, lifecycle_stage='active', name='CoachSportif', tags={}>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "4531bfad",
    "metadata": {},
    "outputs": [
@@ -234,7 +227,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025/05/26 16:06:15 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
+      "2025/05/30 01:24:09 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
      ]
     },
     {
@@ -259,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "01181420",
    "metadata": {},
    "outputs": [
@@ -269,7 +262,7 @@
        "['model_reco.pkl']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "d48e447b",
    "metadata": {},
    "outputs": [
@@ -320,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "ca457903",
    "metadata": {},
    "outputs": [
@@ -330,7 +323,7 @@
        "['model_perf.pkl']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "b6c6479d",
    "metadata": {},
    "outputs": [
@@ -351,7 +344,7 @@
        "['model_perf.pkl']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +356,7 @@
     "import joblib\n",
     "\n",
     "# Chargement\n",
-    "df = pd.read_csv(\"data_perf.csv\")\n",
+    "df = pd.read_csv(\"data/data_perf.csv\")\n",
     "\n",
     "X = df.drop(\"progression_future\", axis=1)\n",
     "y = df[\"progression_future\"]\n",
@@ -385,7 +378,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.10"
   }
  },
